<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="chat">Chat</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="default_text">-</string>
    <string name="find_your_destination_hospital">Find Your Destination\nHospital</string>
    <string name="hospitals">Hospitals</string>
    <string name="find_a_hospital">Find a Hospital</string>
    <string name="say_hello_to_user">Hi, %s</string>
    <string name="maps">Maps</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="register">Register</string>
    <string name="label">Phone number copied</string>
    <string name="remove_bookmark">%s removed from bookmark</string>
    <string name="add_bookmark">%s added to bookmark</string>
    <string name="phone_is_copied">%s has been copied</string>
    <string name="empty_search_hospital">No hospital found from search results \'%s\'</string>
    <string name="ok">OK</string>
    <string name="queueu_number">Queueu number:</string>
    <string name="registration_number">Registration Number</string>
    <string name="date">Date</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="status">Status</string>
    <string name="accept_date">Accept Date</string>
    <string name="admin_notes">Admin Notes</string>
    <string name="registration">Registration</string>
    <string name="registration_wait_title">Waiting for Registration Confirmation</string>
    <string name="register_wait">You have successfully registered at %s Hospital, Wait for the admin to confirm your registration</string>
    <string name="signed_up_today">You have registered at the %s Hospital today, wait for the admin to respond to your registration or register again tomorrow</string>
    <string name="signed_up_today_accept">Your registration today at %s Hospital has been received. You can register again tomorrow</string>
    <string name="not_yet_admin">Currently you can\'t register, because the %s Hospital doesn\'t have an admin yet</string>
    <string name="choose_referral_date">Choose a referral date</string>
    <string name="please_select">Please select</string>
    <string name="only_weekdays_to_registration">Sorry, registration can only be done Monday-Friday</string>
    <string name="referred_to">Referred To</string>
    >
</resources>